# Bakalauras_RaspberryPi_Code

Lock_control/: main.py
Start_up/: CMakeLists.txt  Start  Start _up.depend  main.cpp
